Correccion de errores luego de merge

--- a/templates/base.html
+++ b/templates/base.html
@@ -196,12 +196,12 @@
             <li class="nav-item">
               <a href="{% url 'tasklist' %}" class="nav-link {% if datos.menu == 'tableTask' %} active {% endif %}">
                 <i class="nav-icon fa fa-clipboard-list text-info"></i>
-                <p>Mis Tareas asignadas</p>
+                <p>Tareas</p>
               </a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="nav-icon fa fa-clipboard-list text-info"></i>
+                <i class="nav-icon fa fa-toolbox text-info"></i>
                 <p>Recursos
                   <i class="right fas fa-angle-left"></i>
                 </p>
