Se arregla % de avance de tarea

--- a/templates/task/tasklist.html
+++ b/templates/task/tasklist.html
@@ -615,7 +615,7 @@
                       <!-- /.modal-dialog -->
                     </div>
                     {% else %}
-                    <button type="button" class="btn btn-block btn-info btn-sm" data-toggle="modal"
+                    <button name="progreso" type="button" class="btn btn-block btn-info btn-sm" data-toggle="modal"
                       data-target="#modal-Progreso{{tarea.idTarea}}">
                       <i class="fas fa-percentage"></i><!--  -->
                       <span>Progresar</span>
